--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
-[build]
-command = "npm run build"
-functions = "functions"
-
-[dev]
-functions = "functions"
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+[[redirects]]
+  force = true
+  from = "/api/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
