--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-modules index.js",
+    "start": "node index.js",
     "build": "babel index.js --out-dir build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^1.6.0",
+    "@types/express": "^4.17.17",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^12.0.4",
-    "express": "^4.17.2",
+    "express": "^4.18.2",
     "json2csv": "^5.0.7",
     "mongoose": "^6.1.6",
     "netlify-lambda": "^2.0.16",
