--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "build": "babel index.js --out-dir build"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
